Further refactoring with better naming. Remove uneeded files.

--- a/RM/3_1_0/notebooks/XdBoolean Examples.ipynb
+++ b/RM/3_1_0/notebooks/XdBoolean Examples.ipynb
@@ -34,7 +34,7 @@
    "source": [
     "import sys \n",
     "sys.path.append(\"../pylib/\")\n",
-    "from xdatatypes import XdBooleanType"
+    "from xdt import XdBooleanType"
    ]
   },
   {
@@ -61,7 +61,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Help on class XdBooleanType in module xdatatypes:\n",
+      "Help on class XdBooleanType in module xdt:\n",
       "\n",
       "class XdBooleanType(XdAnyType)\n",
       " |  XdBooleanType(label, opt)\n",
@@ -178,9 +178,6 @@
       " |      The primary definition URL for the model.\n",
       " |      Cannot be an IP address.\n",
       " |  \n",
-      " |  doc\n",
-      " |      The human readable documentation string describing the purpose of the model.\n",
-      " |  \n",
       " |  docs\n",
       " |      The human readable documentation string describing the purpose of the model.\n",
       " |  \n",
@@ -209,6 +206,7 @@
       " |      Each list item is a tuple where 0 is the predicate and 1 is the object.\n",
       " |      Ex: ('rdf:resource','https://www.niddk.nih.gov/health-information/health-statistics')\n",
       " |      The setter accepts the tuple and appends it to the list.\n",
+      " |      If an empty list is supplied it resets the value to the empty list.\n",
       " |  \n",
       " |  tr\n",
       " |      Time Recorded. If present this must be a valid date-time. \n",
@@ -243,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true,
     "slideshow": {
@@ -255,7 +253,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "XdBooleanType : Can it happen?, ID: cjmtifq2n0002yn8pcxjohexh\n"
+      "XdBooleanType : Can it happen?, ID: cjmugad2y0000kp8pmlt84ojg\n"
      ]
     }
    ],
@@ -308,7 +306,7 @@
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
       "\u001b[0;32m<ipython-input-4-f85e3332705d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0md\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0masXSD\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/DII/S3Model/RM/3_1_0/pylib/xdatatypes.py\u001b[0m in \u001b[0;36masXSD\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    580\u001b[0m         \u001b[0mReturn\u001b[0m \u001b[0ma\u001b[0m \u001b[0mXML\u001b[0m \u001b[0mSchema\u001b[0m \u001b[0mcomplexType\u001b[0m \u001b[0mdefinition\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    581\u001b[0m         \"\"\"\n\u001b[0;32m--> 582\u001b[0;31m         \u001b[0mtrues\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moptions\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'trues'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    583\u001b[0m         \u001b[0mfalses\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moptions\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'falses'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    584\u001b[0m         \u001b[0mindent\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/DII/S3Model/RM/3_1_0/pylib/xdt.py\u001b[0m in \u001b[0;36masXSD\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    584\u001b[0m         \u001b[0mReturn\u001b[0m \u001b[0ma\u001b[0m \u001b[0mXML\u001b[0m \u001b[0mSchema\u001b[0m \u001b[0mcomplexType\u001b[0m \u001b[0mdefinition\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    585\u001b[0m         \"\"\"\n\u001b[0;32m--> 586\u001b[0;31m         \u001b[0mtrues\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moptions\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'trues'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    587\u001b[0m         \u001b[0mfalses\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moptions\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'falses'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    588\u001b[0m         \u001b[0mindent\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mAttributeError\u001b[0m: 'XdBooleanType' object has no attribute 'options'"
      ]
     }
