Refactor file names to avoid conflicting names with other libraries and tools.

--- a/RM/3_1_0/notebooks/XdLink Examples.ipynb
+++ b/RM/3_1_0/notebooks/XdLink Examples.ipynb
@@ -34,7 +34,7 @@
    "source": [
     "import sys \n",
     "sys.path.append(\"../pylib/\")\n",
-    "from xdt import XdLinkType"
+    "from s3m_xdt import XdLinkType"
    ]
   },
   {
@@ -61,7 +61,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Help on class XdLinkType in module xdt:\n",
+      "Help on class XdLinkType in module s3m_xdt:\n",
       "\n",
       "class XdLinkType(XdAnyType)\n",
       " |  XdLinkType(label: str, link: str, relation: str)\n",
@@ -83,6 +83,16 @@
       " |  \n",
       " |  __init__(self, label: str, link: str, relation: str)\n",
       " |      The semantic label (name of the model) is required.\n",
+      " |  \n",
+      " |  asJSON(self)\n",
+      " |      Return an example JSON fragment for this model.\n",
+      " |  \n",
+      " |  asXML(self)\n",
+      " |      Return an example XML fragment for this model.\n",
+      " |      \n",
+      " |      The core elements are included even though they may not be \n",
+      " |      required via cardinality. Therefore this example may be considerably \n",
+      " |      larger than an actual implementation.\n",
       " |  \n",
       " |  asXSD(self)\n",
       " |      Return a XML Schema complexType definition.\n",
@@ -139,9 +149,9 @@
       " |      The cardinality dictionary uses a string representation of each \n",
       " |      property name and a tuple as the value.\n",
       " |      \n",
-      " |      The value passed into the setter is a tuple with v[0] as a string and \n",
+      " |      The value passed into the setter is a tuple with v[0] as a string (key) and \n",
       " |      v[1] as a tuple containing an integer set representing the \n",
-      " |      (minimum, maximum) values. \n",
+      " |      (minimum, maximum) values. The entire tuple is replaced in the dictionary. \n",
       " |      \n",
       " |      Examples\n",
       " |      --------\n",
@@ -269,7 +279,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "XdLinkType : Related DM, ID: cjmuzst0400006d8pubwnr6f7\n"
+      "XdLinkType : Related DM, ID: cjmw4x1v60000u08pwwh1lv88\n"
      ]
     }
    ],
@@ -348,7 +358,7 @@
     }
    },
    "source": [
-    "# Semantics (part 1)\n",
+    "# Ontological Semantics (part 1)\n",
     "It is important to understand the relationship between the model and what the model is about. \n",
     "\n",
     "tl;dr The unique ID *mcuid* is a synonym for the *label* which is the *Subject* of the *SPO triple*."
@@ -412,7 +422,7 @@
     }
    },
    "source": [
-    "# Semantics (part 2)\n",
+    "# Ontological Semantics (part 2)\n",
     "In addition to the defining_url we can add more RDF semantics to the model for machine processing. \n",
     "\n",
     "We do this by passing in tuples with a predicate/object pair. \n",
@@ -481,18 +491,18 @@
      "output_type": "stream",
      "text": [
       "  \n",
-      "<xs:element name=\"ms-cjmuzst0400016d8pdjrefmjm\" substitutionGroup=\"s3m:Items\" type=\"s3m:mc-cjmuzst0400016d8pdjrefmjm\"/>\n",
-      "  <xs:complexType name=\"mc-cjmuzst0400016d8pdjrefmjm\">\n",
+      "<xs:element name=\"ms-cjmw4x1v60001u08pnno7kme2\" substitutionGroup=\"s3m:Items\" type=\"s3m:mc-cjmw4x1v60001u08pnno7kme2\"/>\n",
+      "  <xs:complexType name=\"mc-cjmw4x1v60001u08pnno7kme2\">\n",
       "    <xs:complexContent>\n",
       "      <xs:restriction base=\"s3m:XdAdapterType\">\n",
       "        <xs:sequence>\n",
-      "          <xs:element maxOccurs=\"unbounded\" minOccurs=\"0\" ref=\"s3m:ms-cjmuzst0400006d8pubwnr6f7\"/>\n",
+      "          <xs:element maxOccurs=\"unbounded\" minOccurs=\"0\" ref=\"s3m:ms-cjmw4x1v60000u08pwwh1lv88\"/>\n",
       "        </xs:sequence>\n",
       "      </xs:restriction>\n",
       "    </xs:complexContent>\n",
       "  </xs:complexType>\n",
-      "  <xs:element name=\"ms-cjmuzst0400006d8pubwnr6f7\" substitutionGroup=\"s3m:XdAdapter-value\" type=\"s3m:mc-cjmuzst0400006d8pubwnr6f7\"/>\n",
-      "  <xs:complexType name=\"mc-cjmuzst0400006d8pubwnr6f7\">\n",
+      "  <xs:element name=\"ms-cjmw4x1v60000u08pwwh1lv88\" substitutionGroup=\"s3m:XdAdapter-value\" type=\"s3m:mc-cjmw4x1v60000u08pwwh1lv88\"/>\n",
+      "  <xs:complexType name=\"mc-cjmw4x1v60000u08pwwh1lv88\">\n",
       "    <xs:annotation>\n",
       "      <xs:documentation>\n",
       "        Provide a meaningful link to another S3Model DM\n",
@@ -500,7 +510,7 @@
       "Definition: https%3A//s3model.com/examples\n",
       "      </xs:documentation>\n",
       "      <xs:appinfo>\n",
-      "        <rdfs:Class rdf:about=\"mc-cjmuzst0400006d8pubwnr6f7\">\n",
+      "        <rdfs:Class rdf:about=\"mc-cjmw4x1v60000u08pwwh1lv88\">\n",
       "          <rdfs:subClassOf rdf:resource=\"https://www.s3model.com/ns/s3m/s3model_3_1_0.xsd#XdLinkType\"/>\n",
       "          <rdfs:subClassOf rdf:resource=\"https://www.s3model.com/ns/s3m/s3model/RMC\"/>\n",
       "          <rdfs:isDefinedBy rdf:resource=\"https%3A//s3model.com/examples\"/>\n",
@@ -543,28 +553,30 @@
     }
    },
    "source": [
-    "View an example XML fragment."
+    "View an example XML fragment for the above model."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "scrolled": true,
+    "scrolled": false,
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "fragment"
     }
    },
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'XdLinkType' object has no attribute 'asXML'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-12-e16e1e3ac995>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0md\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0masXML\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'XdLinkType' object has no attribute 'asXML'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  <ms-cjmw4x1v60000u08pwwh1lv88>\n",
+      "    <label>Related DM</label>\n",
+      "    <link>https://s3model.com/dmlib/dm-cjmuxu61q0000z98p91fewlhm</link>\n",
+      "    <relation>inSubset</relation>\n",
+      "    <relation-uri>http://purl.obolibrary.org/obo/BFO_0000063</relation-uri>\n",
+      "  </ms-cjmw4x1v60000u08pwwh1lv88>\n",
+      "\n"
      ]
     }
    ],
@@ -585,20 +597,326 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
+    "scrolled": false,
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"ms-cjmw4x1v60000u08pwwh1lv88\": {\n",
+      "    \"label\": \"Related DM\",\n",
+      "    \"link\": \"https://s3model.com/dmlib/dm-cjmuxu61q0000z98p91fewlhm\",\n",
+      "    \"relation\": \"inSubset\",\n",
+      "    \"relation-uri\": \"http://purl.obolibrary.org/obo/BFO_0000063\"\n",
+      "  }\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
     "print(d.asJSON())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "\n",
+    "# Temporal Semantics\n",
+    "As discussed on a previous example. The **temporal and spatial semantics** are managed via the cardinality dictionary. Review the XSD and note that they are allowed but not required, by default, in any data via their presence and the minOccurs=\"0\". However the modeler can require them by setting the minOccurs in the cardinality dictionary. Let's require a Valid Time Begin and a Valid Time End. Review the docs on the cardinality setter. Then review the model and the data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'act': (0, 1), 'ev': (0, None), 'vtb': (1, 1), 'vte': (1, 1), 'tr': (0, 1), 'modified': (0, 1), 'location': (0, 1), 'relation_uri': (0, 1)}\n"
+     ]
+    }
+   ],
+   "source": [
+    "d.cardinality = ('vtb', (1,1))\n",
+    "d.cardinality = ('vte', (1,1))\n",
+    "print(d.cardinality)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "Now we see in the model that these two elements have a minOccurs set to 1 making them required in the data. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "scrolled": true,
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  \n",
+      "<xs:element name=\"ms-cjmw4x1v60001u08pnno7kme2\" substitutionGroup=\"s3m:Items\" type=\"s3m:mc-cjmw4x1v60001u08pnno7kme2\"/>\n",
+      "  <xs:complexType name=\"mc-cjmw4x1v60001u08pnno7kme2\">\n",
+      "    <xs:complexContent>\n",
+      "      <xs:restriction base=\"s3m:XdAdapterType\">\n",
+      "        <xs:sequence>\n",
+      "          <xs:element maxOccurs=\"unbounded\" minOccurs=\"0\" ref=\"s3m:ms-cjmw4x1v60000u08pwwh1lv88\"/>\n",
+      "        </xs:sequence>\n",
+      "      </xs:restriction>\n",
+      "    </xs:complexContent>\n",
+      "  </xs:complexType>\n",
+      "  <xs:element name=\"ms-cjmw4x1v60000u08pwwh1lv88\" substitutionGroup=\"s3m:XdAdapter-value\" type=\"s3m:mc-cjmw4x1v60000u08pwwh1lv88\"/>\n",
+      "  <xs:complexType name=\"mc-cjmw4x1v60000u08pwwh1lv88\">\n",
+      "    <xs:annotation>\n",
+      "      <xs:documentation>\n",
+      "        Provide a meaningful link to another S3Model DM\n",
+      "\n",
+      "Definition: https%3A//s3model.com/examples\n",
+      "      </xs:documentation>\n",
+      "      <xs:appinfo>\n",
+      "        <rdfs:Class rdf:about=\"mc-cjmw4x1v60000u08pwwh1lv88\">\n",
+      "          <rdfs:subClassOf rdf:resource=\"https://www.s3model.com/ns/s3m/s3model_3_1_0.xsd#XdLinkType\"/>\n",
+      "          <rdfs:subClassOf rdf:resource=\"https://www.s3model.com/ns/s3m/s3model/RMC\"/>\n",
+      "          <rdfs:isDefinedBy rdf:resource=\"https%3A//s3model.com/examples\"/>\n",
+      "          <sem:subTypeOf rdf:resource=\"https%3A//s3model.com/dmlib/dm-cjmuxu61q0000z98p91fewlhm\"/>\n",
+      "        </rdfs:Class>\n",
+      "      </xs:appinfo>\n",
+      "    </xs:annotation>\n",
+      "    <xs:complexContent>\n",
+      "      <xs:restriction base=\"s3m:XdLinkType\">\n",
+      "        <xs:sequence>\n",
+      "          <xs:element maxOccurs=\"1\" minOccurs=\"1\" name=\"label\" type=\"xs:string\" fixed=\"Related DM\"/>\n",
+      "          <xs:element maxOccurs=\"1\" minOccurs=\"0\" name=\"act\" type=\"xs:string\" default=\"\"/>\n",
+      "          <xs:element maxOccurs=\"1\" minOccurs=\"0\" ref=\"s3m:ExceptionalValue\"/>\n",
+      "          <xs:element maxOccurs=\"1\" minOccurs=\"1\" name=\"vtb\" type=\"xs:dateTime\"/>\n",
+      "          <xs:element maxOccurs=\"1\" minOccurs=\"1\" name=\"vte\" type=\"xs:dateTime\"/>\n",
+      "          <xs:element maxOccurs=\"1\" minOccurs=\"0\" name=\"tr\" type=\"xs:dateTime\"/>\n",
+      "          <xs:element maxOccurs=\"1\" minOccurs=\"0\" name=\"modified\" type=\"xs:dateTime\"/>\n",
+      "          <xs:element maxOccurs=\"1\" minOccurs=\"0\" name=\"latitude\" type=\"xs:decimal\"/>\n",
+      "          <xs:element maxOccurs=\"1\" minOccurs=\"0\" name=\"longitude\" type=\"xs:decimal\"/>\n",
+      "          <xs:element maxOccurs='1' minOccurs='1' name='link' type='xs:anyURI'fixed='https://s3model.com/dmlib/dm-cjmuxu61q0000z98p91fewlhm'/>\n",
+      "          <xs:element maxOccurs='1' minOccurs='1' name='relation' type='xs:string' fixed='inSubset'/>\n",
+      "          <xs:element maxOccurs='1' minOccurs='1' name='relation-uri' type='xs:anyURI' fixed='http://purl.obolibrary.org/obo/BFO_0000063'/>\n",
+      "        </xs:sequence>\n",
+      "      </xs:restriction>\n",
+      "    </xs:complexContent>\n",
+      "  </xs:complexType>\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(d.asXSD())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "scrolled": true,
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  <ms-cjmw4x1v60000u08pwwh1lv88>\n",
+      "    <label>Related DM</label>\n",
+      "    <vtb>2006-06-04T18:13:51.0</vtb>\n",
+      "    <vte>2026-05-04T18:13:51.0</vte>\n",
+      "    <link>https://s3model.com/dmlib/dm-cjmuxu61q0000z98p91fewlhm</link>\n",
+      "    <relation>inSubset</relation>\n",
+      "    <relation-uri>http://purl.obolibrary.org/obo/BFO_0000063</relation-uri>\n",
+      "  </ms-cjmw4x1v60000u08pwwh1lv88>\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(d.asXML())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Spatial Semantics\n",
+    "In S3Model we only apply latitude and longitude to each element. Modeling altitude is a complex model based on the context. Therefore altitude should be modeled as a XdQuantity or possibly a Cluster of XdQuantity models to accommodate pressure, temperature, altitude and the contextual measurement units. \n",
+    "Here we are going to reset the temporal requirements we set above and then set the location requirement. There is no reason that they can't both be used together. This is just an exercise to demonstrate resetting the values. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'act': (0, 1), 'ev': (0, None), 'vtb': (0, 1), 'vte': (0, 1), 'tr': (0, 1), 'modified': (0, 1), 'location': (1, 1), 'relation_uri': (0, 1)}\n"
+     ]
+    }
+   ],
+   "source": [
+    "d.cardinality = ('vtb', (0,1))\n",
+    "d.cardinality = ('vte', (0,1))\n",
+    "d.cardinality = ('location', (1,1))\n",
+    "print(d.cardinality)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "Note that *location* requires both *latitude* and *longitude*. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  \n",
+      "<xs:element name=\"ms-cjmw4x1v60001u08pnno7kme2\" substitutionGroup=\"s3m:Items\" type=\"s3m:mc-cjmw4x1v60001u08pnno7kme2\"/>\n",
+      "  <xs:complexType name=\"mc-cjmw4x1v60001u08pnno7kme2\">\n",
+      "    <xs:complexContent>\n",
+      "      <xs:restriction base=\"s3m:XdAdapterType\">\n",
+      "        <xs:sequence>\n",
+      "          <xs:element maxOccurs=\"unbounded\" minOccurs=\"0\" ref=\"s3m:ms-cjmw4x1v60000u08pwwh1lv88\"/>\n",
+      "        </xs:sequence>\n",
+      "      </xs:restriction>\n",
+      "    </xs:complexContent>\n",
+      "  </xs:complexType>\n",
+      "  <xs:element name=\"ms-cjmw4x1v60000u08pwwh1lv88\" substitutionGroup=\"s3m:XdAdapter-value\" type=\"s3m:mc-cjmw4x1v60000u08pwwh1lv88\"/>\n",
+      "  <xs:complexType name=\"mc-cjmw4x1v60000u08pwwh1lv88\">\n",
+      "    <xs:annotation>\n",
+      "      <xs:documentation>\n",
+      "        Provide a meaningful link to another S3Model DM\n",
+      "\n",
+      "Definition: https%3A//s3model.com/examples\n",
+      "      </xs:documentation>\n",
+      "      <xs:appinfo>\n",
+      "        <rdfs:Class rdf:about=\"mc-cjmw4x1v60000u08pwwh1lv88\">\n",
+      "          <rdfs:subClassOf rdf:resource=\"https://www.s3model.com/ns/s3m/s3model_3_1_0.xsd#XdLinkType\"/>\n",
+      "          <rdfs:subClassOf rdf:resource=\"https://www.s3model.com/ns/s3m/s3model/RMC\"/>\n",
+      "          <rdfs:isDefinedBy rdf:resource=\"https%3A//s3model.com/examples\"/>\n",
+      "          <sem:subTypeOf rdf:resource=\"https%3A//s3model.com/dmlib/dm-cjmuxu61q0000z98p91fewlhm\"/>\n",
+      "        </rdfs:Class>\n",
+      "      </xs:appinfo>\n",
+      "    </xs:annotation>\n",
+      "    <xs:complexContent>\n",
+      "      <xs:restriction base=\"s3m:XdLinkType\">\n",
+      "        <xs:sequence>\n",
+      "          <xs:element maxOccurs=\"1\" minOccurs=\"1\" name=\"label\" type=\"xs:string\" fixed=\"Related DM\"/>\n",
+      "          <xs:element maxOccurs=\"1\" minOccurs=\"0\" name=\"act\" type=\"xs:string\" default=\"\"/>\n",
+      "          <xs:element maxOccurs=\"1\" minOccurs=\"0\" ref=\"s3m:ExceptionalValue\"/>\n",
+      "          <xs:element maxOccurs=\"1\" minOccurs=\"0\" name=\"vtb\" type=\"xs:dateTime\"/>\n",
+      "          <xs:element maxOccurs=\"1\" minOccurs=\"0\" name=\"vte\" type=\"xs:dateTime\"/>\n",
+      "          <xs:element maxOccurs=\"1\" minOccurs=\"0\" name=\"tr\" type=\"xs:dateTime\"/>\n",
+      "          <xs:element maxOccurs=\"1\" minOccurs=\"0\" name=\"modified\" type=\"xs:dateTime\"/>\n",
+      "          <xs:element maxOccurs=\"1\" minOccurs=\"1\" name=\"latitude\" type=\"xs:decimal\"/>\n",
+      "          <xs:element maxOccurs=\"1\" minOccurs=\"1\" name=\"longitude\" type=\"xs:decimal\"/>\n",
+      "          <xs:element maxOccurs='1' minOccurs='1' name='link' type='xs:anyURI'fixed='https://s3model.com/dmlib/dm-cjmuxu61q0000z98p91fewlhm'/>\n",
+      "          <xs:element maxOccurs='1' minOccurs='1' name='relation' type='xs:string' fixed='inSubset'/>\n",
+      "          <xs:element maxOccurs='1' minOccurs='1' name='relation-uri' type='xs:anyURI' fixed='http://purl.obolibrary.org/obo/BFO_0000063'/>\n",
+      "        </xs:sequence>\n",
+      "      </xs:restriction>\n",
+      "    </xs:complexContent>\n",
+      "  </xs:complexType>\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(d.asXSD())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  <ms-cjmw4x1v60000u08pwwh1lv88>\n",
+      "    <label>Related DM</label>\n",
+      "    <latitude>-22.456</latitude>\n",
+      "    <longitude>123.654</longitude>\n",
+      "    <link>https://s3model.com/dmlib/dm-cjmuxu61q0000z98p91fewlhm</link>\n",
+      "    <relation>inSubset</relation>\n",
+      "    <relation-uri>http://purl.obolibrary.org/obo/BFO_0000063</relation-uri>\n",
+      "  </ms-cjmw4x1v60000u08pwwh1lv88>\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(d.asXML())"
    ]
   }
  ],
  "metadata": {
-  "celltoolbar": "Raw Cell Format",
   "kernelspec": {
    "display_name": "Python [conda env:S3Model]",
    "language": "python",
