--- a/RM/3_1_0/notebooks/XdBoolean Examples.ipynb
+++ b/RM/3_1_0/notebooks/XdBoolean Examples.ipynb
@@ -34,7 +34,7 @@
    "source": [
     "import sys \n",
     "sys.path.append(\"../pylib/\")\n",
-    "from xdt import XdBooleanType"
+    "from s3m_xdt import XdBooleanType"
    ]
   },
   {
@@ -61,7 +61,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Help on class XdBooleanType in module xdt:\n",
+      "Help on class XdBooleanType in module s3m_xdt:\n",
       "\n",
       "class XdBooleanType(XdAnyType)\n",
       " |  XdBooleanType(label: str, opt: dict)\n",
@@ -172,9 +172,9 @@
       " |      The cardinality dictionary uses a string representation of each \n",
       " |      property name and a tuple as the value.\n",
       " |      \n",
-      " |      The value passed into the setter is a tuple with v[0] as a string and \n",
+      " |      The value passed into the setter is a tuple with v[0] as a string (key) and \n",
       " |      v[1] as a tuple containing an integer set representing the \n",
-      " |      (minimum, maximum) values. \n",
+      " |      (minimum, maximum) values. The entire tuple is replaced in the dictionary. \n",
       " |      \n",
       " |      Examples\n",
       " |      --------\n",
@@ -303,7 +303,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "XdBooleanType : Can it happen here?, ID: cjmvzik0o0000ba8pyw746uzr\n"
+      "XdBooleanType : Can it happen here?, ID: cjmw4y6u90000vi8pd4re49hj\n"
      ]
     }
    ],
@@ -497,18 +497,18 @@
      "output_type": "stream",
      "text": [
       "  \n",
-      "<xs:element name=\"ms-cjmvzik0o0001ba8p7km1h9xx\" substitutionGroup=\"s3m:Items\" type=\"s3m:mc-cjmvzik0o0001ba8p7km1h9xx\"/>\n",
-      "  <xs:complexType name=\"mc-cjmvzik0o0001ba8p7km1h9xx\">\n",
+      "<xs:element name=\"ms-cjmw4y6u90001vi8pqyb6m8us\" substitutionGroup=\"s3m:Items\" type=\"s3m:mc-cjmw4y6u90001vi8pqyb6m8us\"/>\n",
+      "  <xs:complexType name=\"mc-cjmw4y6u90001vi8pqyb6m8us\">\n",
       "    <xs:complexContent>\n",
       "      <xs:restriction base=\"s3m:XdAdapterType\">\n",
       "        <xs:sequence>\n",
-      "          <xs:element maxOccurs=\"unbounded\" minOccurs=\"0\" ref=\"s3m:ms-cjmvzik0o0000ba8pyw746uzr\"/>\n",
+      "          <xs:element maxOccurs=\"unbounded\" minOccurs=\"0\" ref=\"s3m:ms-cjmw4y6u90000vi8pd4re49hj\"/>\n",
       "        </xs:sequence>\n",
       "      </xs:restriction>\n",
       "    </xs:complexContent>\n",
       "  </xs:complexType>\n",
-      "  <xs:element name=\"ms-cjmvzik0o0000ba8pyw746uzr\" substitutionGroup=\"s3m:XdAdapter-value\" type=\"s3m:mc-cjmvzik0o0000ba8pyw746uzr\"/>\n",
-      "  <xs:complexType name=\"mc-cjmvzik0o0000ba8pyw746uzr\">\n",
+      "  <xs:element name=\"ms-cjmw4y6u90000vi8pd4re49hj\" substitutionGroup=\"s3m:XdAdapter-value\" type=\"s3m:mc-cjmw4y6u90000vi8pd4re49hj\"/>\n",
+      "  <xs:complexType name=\"mc-cjmw4y6u90000vi8pd4re49hj\">\n",
       "    <xs:annotation>\n",
       "      <xs:documentation>\n",
       "        Provide a True/False result based on user selected option from pulldown or radio button style UI. \n",
@@ -517,7 +517,7 @@
       "Definition: https%3A//www.harpercollins.com/9780062696199/can-it-happen-here/\n",
       "      </xs:documentation>\n",
       "      <xs:appinfo>\n",
-      "        <rdfs:Class rdf:about=\"mc-cjmvzik0o0000ba8pyw746uzr\">\n",
+      "        <rdfs:Class rdf:about=\"mc-cjmw4y6u90000vi8pd4re49hj\">\n",
       "          <rdfs:subClassOf rdf:resource=\"https://www.s3model.com/ns/s3m/s3model_3_1_0.xsd#XdBooleanType\"/>\n",
       "          <rdfs:subClassOf rdf:resource=\"https://www.s3model.com/ns/s3m/s3model/RMC\"/>\n",
       "          <rdfs:label rdf:resource=\"Can it happen here?\"/>\n",
@@ -600,9 +600,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  <ms-cjmvzik0o0000ba8pyw746uzr>\n",
+      "  <ms-cjmw4y6u90000vi8pd4re49hj>\n",
       "    <label>Can it happen here?</label>\n",
-      "    <act>Private</act>\n",
+      "    <act>Public</act>\n",
       "    <OTH>\n",
       "      <ev-name>Other</ev-name>  # example exceptional value\n",
       "    </OTH>\n",
@@ -612,8 +612,8 @@
       "    <modified>2006-05-04T18:13:51.0</modified>\n",
       "    <latitude>-22.456</latitude>\n",
       "    <longitude>123.654</longitude>\n",
-      "    <false-value>No</false-value>\n",
-      "  </ms-cjmvzik0o0000ba8pyw746uzr>\n",
+      "    <false-value>Unlikely</false-value>\n",
+      "  </ms-cjmw4y6u90000vi8pd4re49hj>\n",
       "\n"
      ]
     }
@@ -648,9 +648,9 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "  \"ms-cjmvzik0o0000ba8pyw746uzr\": {\n",
+      "  \"ms-cjmw4y6u90000vi8pd4re49hj\": {\n",
       "    \"label\": \"Can it happen here?\",\n",
-      "    \"act\": \"Public\",\n",
+      "    \"act\": \"Super Secret\",\n",
       "    \"OTH\": {\n",
       "      \"ev-name\": \"Other\",\n",
       "      \"#text\": \"# example exceptional value\"\n",
@@ -661,7 +661,7 @@
       "    \"modified\": \"2006-05-04T18:13:51.0\",\n",
       "    \"latitude\": \"-22.456\",\n",
       "    \"longitude\": \"123.654\",\n",
-      "    \"true-value\": \"Maybe\"\n",
+      "    \"false-value\": \"Unlikely\"\n",
       "  }\n",
       "}\n"
      ]
@@ -720,10 +720,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  <ms-cjmvzik0o0000ba8pyw746uzr>\n",
+      "  <ms-cjmw4y6u90000vi8pd4re49hj>\n",
       "    <label>Can it happen here?</label>\n",
-      "    <true-value>Possible</true-value>\n",
-      "  </ms-cjmvzik0o0000ba8pyw746uzr>\n",
+      "    <true-value>Maybe</true-value>\n",
+      "  </ms-cjmw4y6u90000vi8pd4re49hj>\n",
       "\n"
      ]
     }
