Start on XdFileType tutorial.

--- a/RM/3_1_0/notebooks/Getting Started.ipynb
+++ b/RM/3_1_0/notebooks/Getting Started.ipynb
@@ -8,6 +8,45 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This notebook will guide you through a logical sequence for you to become familiar with S3Model and how to use the library in your applications. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**eXtended datatypes**\n",
+    "\n",
+    "The Xd* datatypes provide the capability of adding ontological, spatial and temporal semantics to simple datatypes.\n",
+    "\n",
+    "You should go through each of these interactive notebooks in sequence. Not all features are expressed in each notebook. Each notebook does build on the previous notebooks. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. [XdBooleanType](XdBoolean%20Examples.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. [XdLinkType](XdLink%20Examples.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3. [XdStringType](XdString%20Examples.ipynb)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
