--- a/RM/3_1_0/notebooks/XdBoolean Examples.ipynb
+++ b/RM/3_1_0/notebooks/XdBoolean Examples.ipynb
@@ -52,6 +52,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
+    "scrolled": false,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -109,7 +110,7 @@
       " |      Return an example JSON fragment for this model.\n",
       " |  \n",
       " |  asJSONex(self)\n",
-      " |      Return an example JSON fragment for this model.\n",
+      " |      Return an example JSON fragment for this model based on the asXMLex method.\n",
       " |  \n",
       " |  asXML(self)\n",
       " |      Return an example XML fragment for this model.\n",
@@ -128,10 +129,12 @@
       " |  Data descriptors defined here:\n",
       " |  \n",
       " |  false_value\n",
-      " |      A string that represents a boolean False in the implementation. These are constrained by a set of enumerations.\n",
+      " |      A string that represents a boolean False in the implementation. \n",
+      " |      These are constrained by a set of enumerations.\n",
       " |  \n",
       " |  true_value\n",
-      " |      A string that represents a boolean True in the implementation. These are constrained by a set of enumerations.\n",
+      " |      A string that represents a boolean True in the implementation. \n",
+      " |      These are constrained by a set of enumerations.\n",
       " |  \n",
       " |  ----------------------------------------------------------------------\n",
       " |  Data and other attributes defined here:\n",
@@ -303,7 +306,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "XdBooleanType : Can it happen here?, ID: cjmw4y6u90000vi8pd4re49hj\n"
+      "XdBooleanType : Can it happen here?, ID: cjmwd53lh0000mn8ppn450gfo\n"
      ]
     }
    ],
@@ -497,18 +500,18 @@
      "output_type": "stream",
      "text": [
       "  \n",
-      "<xs:element name=\"ms-cjmw4y6u90001vi8pqyb6m8us\" substitutionGroup=\"s3m:Items\" type=\"s3m:mc-cjmw4y6u90001vi8pqyb6m8us\"/>\n",
-      "  <xs:complexType name=\"mc-cjmw4y6u90001vi8pqyb6m8us\">\n",
+      "<xs:element name=\"ms-cjmwd53lh0001mn8p0wtg8gco\" substitutionGroup=\"s3m:Items\" type=\"s3m:mc-cjmwd53lh0001mn8p0wtg8gco\"/>\n",
+      "  <xs:complexType name=\"mc-cjmwd53lh0001mn8p0wtg8gco\">\n",
       "    <xs:complexContent>\n",
       "      <xs:restriction base=\"s3m:XdAdapterType\">\n",
       "        <xs:sequence>\n",
-      "          <xs:element maxOccurs=\"unbounded\" minOccurs=\"0\" ref=\"s3m:ms-cjmw4y6u90000vi8pd4re49hj\"/>\n",
+      "          <xs:element maxOccurs=\"unbounded\" minOccurs=\"0\" ref=\"s3m:ms-cjmwd53lh0000mn8ppn450gfo\"/>\n",
       "        </xs:sequence>\n",
       "      </xs:restriction>\n",
       "    </xs:complexContent>\n",
       "  </xs:complexType>\n",
-      "  <xs:element name=\"ms-cjmw4y6u90000vi8pd4re49hj\" substitutionGroup=\"s3m:XdAdapter-value\" type=\"s3m:mc-cjmw4y6u90000vi8pd4re49hj\"/>\n",
-      "  <xs:complexType name=\"mc-cjmw4y6u90000vi8pd4re49hj\">\n",
+      "  <xs:element name=\"ms-cjmwd53lh0000mn8ppn450gfo\" substitutionGroup=\"s3m:XdAdapter-value\" type=\"s3m:mc-cjmwd53lh0000mn8ppn450gfo\"/>\n",
+      "  <xs:complexType name=\"mc-cjmwd53lh0000mn8ppn450gfo\">\n",
       "    <xs:annotation>\n",
       "      <xs:documentation>\n",
       "        Provide a True/False result based on user selected option from pulldown or radio button style UI. \n",
@@ -517,7 +520,7 @@
       "Definition: https%3A//www.harpercollins.com/9780062696199/can-it-happen-here/\n",
       "      </xs:documentation>\n",
       "      <xs:appinfo>\n",
-      "        <rdfs:Class rdf:about=\"mc-cjmw4y6u90000vi8pd4re49hj\">\n",
+      "        <rdfs:Class rdf:about=\"mc-cjmwd53lh0000mn8ppn450gfo\">\n",
       "          <rdfs:subClassOf rdf:resource=\"https://www.s3model.com/ns/s3m/s3model_3_1_0.xsd#XdBooleanType\"/>\n",
       "          <rdfs:subClassOf rdf:resource=\"https://www.s3model.com/ns/s3m/s3model/RMC\"/>\n",
       "          <rdfs:label rdf:resource=\"Can it happen here?\"/>\n",
@@ -600,9 +603,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  <ms-cjmw4y6u90000vi8pd4re49hj>\n",
+      "  <ms-cjmwd53lh0000mn8ppn450gfo>\n",
       "    <label>Can it happen here?</label>\n",
-      "    <act>Public</act>\n",
+      "    <act>Private</act>\n",
       "    <OTH>\n",
       "      <ev-name>Other</ev-name>  # example exceptional value\n",
       "    </OTH>\n",
@@ -612,8 +615,8 @@
       "    <modified>2006-05-04T18:13:51.0</modified>\n",
       "    <latitude>-22.456</latitude>\n",
       "    <longitude>123.654</longitude>\n",
-      "    <false-value>Unlikely</false-value>\n",
-      "  </ms-cjmw4y6u90000vi8pd4re49hj>\n",
+      "    <false-value>No</false-value>\n",
+      "  </ms-cjmwd53lh0000mn8ppn450gfo>\n",
       "\n"
      ]
     }
@@ -648,9 +651,9 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "  \"ms-cjmw4y6u90000vi8pd4re49hj\": {\n",
+      "  \"ms-cjmwd53lh0000mn8ppn450gfo\": {\n",
       "    \"label\": \"Can it happen here?\",\n",
-      "    \"act\": \"Super Secret\",\n",
+      "    \"act\": \"Public\",\n",
       "    \"OTH\": {\n",
       "      \"ev-name\": \"Other\",\n",
       "      \"#text\": \"# example exceptional value\"\n",
@@ -720,10 +723,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  <ms-cjmw4y6u90000vi8pd4re49hj>\n",
+      "  <ms-cjmwd53lh0000mn8ppn450gfo>\n",
       "    <label>Can it happen here?</label>\n",
       "    <true-value>Maybe</true-value>\n",
-      "  </ms-cjmw4y6u90000vi8pd4re49hj>\n",
+      "  </ms-cjmwd53lh0000mn8ppn450gfo>\n",
       "\n"
      ]
     }
