Add example notebooks. Refactor interval types and units in RM. Work on python library.

--- a/RM/3_1_0/notebooks/Getting Started.ipynb
+++ b/RM/3_1_0/notebooks/Getting Started.ipynb
@@ -4,6 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<div class=\"logo-container\">\n",
+    "  <div class=\"logo\"><img src=\"images/DataInsights.png\" height=\"100\" width=\"120\"/></div>\n",
+    "  <div class=\"logo\"><img src=\"images/S3M.png\" height=\"70\" width=\"70\"/></div>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
     "# Getting Started with S3Model\n"
    ]
   },
@@ -12,6 +23,16 @@
    "metadata": {},
    "source": [
     "This notebook will guide you through a logical sequence for you to become familiar with S3Model and how to use the library in your applications. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Multi-level Models vs. Instances\n",
+    "It is essential to understand that the library classes represent the S3Model Reference Model. The instances of these classes express constraints on those classes. These constraints define a specific model that is identified by a Collision-resistant unique identifier (CUID). Once defined, these models are immutable under the guidelines of S3Model. Since shareability is a cornerstone of the S3Model approach these models can be serialized to a XML Schema.\n",
+    "\n",
+    "In the tutorials linked here, we are building only model components one at a time and not as part of a complete data model. An advanced tutorial as well as documentation for Kunteksto and the Infotropic Tools Suite describe creating complete, functional data models. "
    ]
   },
   {
@@ -47,11 +68,134 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "4. [XdFileType](XdFile%20Examples.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "5. [XdOrdinalType](XdOrdinal%20Examples.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Structures**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Meta Information**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Data Model** Wrapper"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**STOP:** You've reached the end of the chapter. Ignore the code below, it's just here to make the page pretty:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<style>\n",
+       "    @import url(http://fonts.googleapis.com/css?family=Roboto:400,300,300italic,400italic,700,700italic);\n",
+       "\n",
+       "    div.cell{\n",
+       "        font-family:'roboto','helvetica','sans';\n",
+       "        color:#444;\n",
+       "        width:800px;\n",
+       "        margin-left:16% !important;\n",
+       "        margin-right:auto;\n",
+       "    }\n",
+       "\n",
+       "    div.text_cell_render{\n",
+       "        font-family: 'roboto','helvetica','sans';\n",
+       "        line-height: 145%;\n",
+       "        font-size: 120%;\n",
+       "        color:#444;\n",
+       "        width:800px;\n",
+       "        margin-left:auto;\n",
+       "        margin-right:auto;\n",
+       "    }\n",
+       "    .CodeMirror{\n",
+       "            font-family: \"Menlo\", source-code-pro,Consolas, monospace;\n",
+       "    }\n",
+       "    .prompt{\n",
+       "        display: None;\n",
+       "    }    \n",
+       "    .warning{\n",
+       "        color: rgb( 240, 20, 20 )\n",
+       "        }\n",
+       "        \n",
+       "    .logo-container {\n",
+       "        display: flex;\n",
+       "        flex-wrap: wrap;\n",
+       "        }\n",
+       "        \n",
+       "        .logo {\n",
+       "        flex: 0 0 50%;\n",
+       "        padding: 10px;\n",
+       "        vertical-align: middle;\n",
+       "        }\n",
+       "        \n",
+       "        * {\n",
+       "        margin: 0;\n",
+       "        box-sizing: border-box;\n",
+       "          }\n",
+       "</style>\n",
+       "<script>\n",
+       "    MathJax.Hub.Config({\n",
+       "                        TeX: {\n",
+       "                           extensions: [\"AMSmath.js\"]\n",
+       "                           },\n",
+       "                tex2jax: {\n",
+       "                    inlineMath: [ ['$','$'], [\"\\\\(\",\"\\\\)\"] ],\n",
+       "                    displayMath: [ ['$$','$$'], [\"\\\\[\",\"\\\\]\"] ]\n",
+       "                },\n",
+       "                displayAlign: 'center', // Change this to 'center' to center equations.\n",
+       "                \"HTML-CSS\": {\n",
+       "                    styles: {'.MathJax_Display': {\"margin\": 4}}\n",
+       "                }\n",
+       "        });\n",
+       "</script>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from IPython.core.display import HTML\n",
+    "def css_styling():\n",
+    "    styles = open(\"styles/custom.css\", \"r\").read()\n",
+    "    return HTML(styles)\n",
+    "css_styling()"
+   ]
   }
  ],
  "metadata": {
